# Infineon_XMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log_for_analysis.txt  mingw32-makefile
004_xmc_varia/: CMakeLists.txt  scratchpad.txt  scratchpad01.txt
004_xmc_varia/doc/: scratchpad-compilation-log.txt
src/: main.c
